cabal-version:      3.0
name:               keiro-migrations
version:            0.1.0.0
synopsis:           Schema migrations for keiro
description:
  Embedded PostgreSQL schema migrations and a migration runner for the Keiro
  event-sourcing framework.

license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Database
build-type:         Simple
tested-with:        GHC >=9.12 && <9.13
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files: sql-migrations/*.sql

source-repository head
  type:     git
  location: https://github.com/shinzui/keiro.git

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedStrings

library
  import:          common
  exposed-modules:
    Keiro.Migrations
    Keiro.Migrations.New

  hs-source-dirs:  src
  build-depends:
    , base                     >=4.18   && <5
    , bytestring               >=0.11
    , codd                     >=0.1.8
    , directory                >=1.3
    , file-embed               >=0.0.15
    , filepath                 >=1.4
    , kiroku-store-migrations
    , streaming
    , text                     >=2.0
    , time                     >=1.12

executable keiro-migrate
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , codd
    , directory
    , keiro-migrations
    , kiroku-store-migrations
    , text
    , time

executable keiro-write-expected-schema
  import:         common
  main-is:        WriteExpectedSchema.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , attoparsec
    , base
    , codd
    , ephemeral-pg      >=0.2
    , keiro-migrations
    , text
    , time

test-suite keiro-migrations-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , async
    , attoparsec
    , base                     >=4.18 && <5
    , codd
    , containers
    , contravariant-extras
    , directory
    , ephemeral-pg             >=0.2
    , filepath
    , generic-lens             >=2.2
    , hasql                    >=1.10
    , hasql-pool               >=1.2
    , hspec                    >=2.10
    , keiro-migrations
    , kiroku-store
    , kiroku-store-migrations
    , lens                     >=5.2
    , temporary
    , text                     >=2.0
    , time                     >=1.12
    , vector                   >=0.13
